Updated Map to get markers displaying correctly. Added services.

--- a/frontends/gomeeki-app/src/app/index.scss
+++ b/frontends/gomeeki-app/src/app/index.scss
@@ -43,6 +43,8 @@ nav.navbar {
   padding: 0;
 }
 
+.angular-google-map-container { height: 400px; }
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
